# zeroscroll

./: .gitignore  README.md
zcrow/: .env.example  .gitignore  Cargo.toml  README.md
zcrow/migrations/: 0001_create_users.sql  0002_create_profiles.sql  0003_create_auth_nonces.sql  0004_create_commitments.sql  0005_create_transactions.sql  0006_create_commitment_events.sql  0007_make_username_displayname_not_null.sql
zcrow/src/: app.rs  config.rs  main.rs
zcrow/src/db/: commitment_repo.rs  mod.rs  nonce_repo.rs  pool.rs  profile_repo.rs  transaction_repo.rs  user_repo.rs
zcrow/src/domain/: mod.rs
zcrow/src/middleware/: jwt_auth.rs
zcrow/src/routes/: auth.rs  commitments.rs  leaderboard.rs  mod.rs  profile.rs  transactions.rs
zcrow/src/services/: auth_service.rs  commitment_service.rs  mod.rs
zcrow/src/utils/: mod.rs
zeroscroll/: .gitignore  README.md  app.json  package-lock.json  package.json
zeroscroll/android/: settings.gradle
zeroscroll/android/app/: build.gradle
zeroscroll/app/: _layout.tsx  modal.tsx
zeroscroll/app/(auth)/: _layout.tsx  login.tsx  register.tsx
zeroscroll/app/(tabs)/: _layout.tsx  addStake.tsx  index.tsx  leaderboard.tsx  settings.tsx  stake_details.tsx
zeroscroll/components/: ScreenTimeDisplay.tsx
zeroscroll/components/Commitments/: CommitmentHistory.tsx  (+3 more)
zeroscroll/constants/: config.ts
zeroscroll/context/: AuthContext.tsx
zeroscroll/hooks/: useApi.ts  useScreenTime.ts  useSolanaBalance.ts
zeroscroll/services/: api.ts  solana.ts
zeroscroll/types/: index.ts
zeroscroll/utils/: base58.ts  debounce.ts  global.ts
(+9 files in other folders)
