[package]
name = "zcrow"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth / crypto
ed25519-dalek = { version = "2.1", features = ["std"] }
bs58 = "0.5"
base64 = "0.22"
jsonwebtoken = "9.3"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
